--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "name": "hue-web",
   "version": "0.1.0",
+  "homepage": "http://antonwy.github.io/hue-web",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "colorsys": "^1.0.22",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-input-range": "^1.3.0",
+    "react-pose": "^4.0.6",
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +32,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
